fixed popover overflow

--- a/Front-End/src/css/search.css
+++ b/Front-End/src/css/search.css
@@ -92,7 +92,6 @@ select {
     border: 2px solid #dfe5ed;
     padding: 40px 80px 20px;
     margin: 0 auto;
-    overflow: auto;
     margin-top: 40px;
     margin-bottom: 40px;
 }
